# ChangeLog for app-admin/apache-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.152 2013/04/11 10:57:14 patrick Exp $

  11 Apr 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Removing ghelm from metadata

*apache-tools-2.4.4-r1 (25 Mar 2013)

  25 Mar 2013; Patrick Lauer <patrick@gentoo.org> +apache-tools-2.4.4-r1.ebuild,
  -apache-tools-2.4.4.ebuild:
  Really fix libexecdir #462668

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  05 Mar 2013; Agostino Sarubbo <ago@gentoo.org> -apache-tools-2.2.22.ebuild,
  -apache-tools-2.2.23.ebuild, -apache-tools-2.4.3-r1.ebuild:
  Remove old

  05 Mar 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  apache-tools-2.4.4.ebuild:
  QA: return ebuild to ~arch.

  05 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild:
  Stable for sh, wrt bug #438680

  04 Mar 2013; Brent Baude <ranger@gentoo.org> apache-tools-2.4.4.ebuild:
  Marking apache-tools-2.4.4 ppc for bug 459264

  04 Mar 2013; Jeroen Roovers <jer@gentoo.org> apache-tools-2.4.4.ebuild:
  Stable for HPPA (bug #459264).

  04 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.4.4.ebuild:
  Stable for x86, wrt bug #459264

  04 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.4.4.ebuild:
  Stable for amd64, wrt bug #459264

  03 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild:
  Stable for sparc, wrt bug #438680

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild:
  Stable for hppa, wrt bug #438680

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild:
  Stable for ppc, wrt bug #438680

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild:
  Stable for ppc64, wrt bug #438680

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.24.ebuild: