@@ -1,8 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX apache-tools-2.2.20-Makefile.patch 1621 SHA256 bfed1a3d5e07766531a04c4752500c69dd60be45b71690c607383e2dc09e140d SHA512 10adb26f52aee6b30214af1ecb69c7a1657a766928aa92dc5b502e702d2c3248996cccfd4cca74d550d6f378f5859289c76225cf5e145081abe2a1f2cceb9a8d WHIRLPOOL 68da82a6300facc7921cc04f0aa0aef9c50f3507f549b548aadc50be65b6097c56bda22a5409883ea83c41a681baa7b4c02a6594de9f94e7969351090bbe001f
 AUX apache-tools-Makefile.patch 1528 SHA256 668caee92c1edd5559a0975c92bd2578ad0359f8835d51a9f0041f4b9e89564b SHA512 b4c54da921ec99ddfb2be2456e4e67660db45fe4fcd4c700a753f63aab2d9b8c1a13ad3408551cbcb595afc6300ced4f2855920229d9743f87a4d18eba4a43d6 WHIRLPOOL c6afac50b5926c7b5663fef0fa21b30c978a0e28dfc36aa5c0327fd0365dcb501a9808d0b525efd4aaee75d8f3c522072e1a0755886e049dcb2c05703f02150a
 DIST httpd-2.2.24.tar.bz2 5490439 SHA256 0453f5d2d7e3b1975a1c6a8a22b6d6ff768715a3b0a89b51e5f7b5851628fad7 SHA512 e1c24535bb0ae309c249c0a6fbd390064a929d960241e5e68737744f120a88b615bd5d9065fc2f749ee664ed96621c9373576e6ca32bd189d625fcd4dc1b8f01 WHIRLPOOL b24bf388e1be29cc52341d66af00318b3a60ad6db6b4df8c6cc0abf496c4e603d3b733529d21d3d1c37dad0008cacafa8078abdff6c25cb42b3874b6e176713e
+DIST httpd-2.2.25.tar.bz2 5524905 SHA256 4bcaf3524796a514b31aa5c64ce80b0cdb484bab5735416de29d00f6d50fa65a SHA512 4750e79bdab4ca28c602a808531dfc1482e86bf425d5cb3bcb42a9ccfbbfde5bfd05e66649ea741523c96de6582f5e12facbb1e7d67257bcf78a3ed7a66f80d9 WHIRLPOOL 7ce37be9b66de24cc7259c6e8a0696b496c893933b1c5dbdff5147c279fb644b5d5fc77ed02531b0f081f0c217f684d1bcd98bac26938b23c1d7a4ec085162f6
 DIST httpd-2.4.4.tar.bz2 4780289 SHA256 92aabddeca76a4ac7330b143df1407bbf35574c7291c15172238ac598d97655c SHA512 d68789e1e585b4acf26e4e32d063fa512525f8fcc2077b1dbf573dd9f4b47667772d94bb65fefb354fbfae331e87b3fdea422a732838c86d8887eed4b3a76af0 WHIRLPOOL c2ec29a0d52ff1d674f103d0d59c0acd15b194b1102ba5078ef76b62aa959ff92adc5977e095b30c6a778cd9385f9c4ded9bfdc6ce8fba381735ca1aa84aa9f0
 EBUILD apache-tools-2.2.24.ebuild 2202 SHA256 de2aa272f672eae732029cda260db4919f1cefff76b96cfbdaf1a764ffafcfa7 SHA512 bbb79157cf3152741e9e9513ba5071bfb2e2bc089ab708dd102bc69172c3480743cd18c7cfefc0ba1f4a886e942ba44a71fca5fd4be7d0561f48b26ba9c64a1c WHIRLPOOL 792750e7f132a2a2e9d485b1453f9240f5b245879ae1dc8eb267184dda0e15de68dfb958eb29b6f4fb1498f3da5199802a58af28783f973d54bfa7e01b756c15
+EBUILD apache-tools-2.2.25.ebuild 2221 SHA256 6205f81129020774405a8c46e4f564baa3739d8d43e4f2344c3a96e44028f65b SHA512 610c17327d4720a980d70f31b0abedeaf9767400d3ff430db81d74b794dff08ce61d06b2c649d8bcc035daa75d807777891730b282da009ca40a9fdcad6ba9ab WHIRLPOOL 6792ecb798a7848dcf32811705c4d7b52e8215a1fde27d5c449ac3ce99cbcd3274ab00070b84340ae3de8e29a5ecf4fc09ef06154481aaeefffe6d3624ffe688
 EBUILD apache-tools-2.4.4-r1.ebuild 2136 SHA256 704ca003d8168bbb5063321ea43d9d9e35dd4216a52a5cdcdaa47e3d3870a47f SHA512 71423841ba0839518c635219fffb840452cf53c136b38292c0e940830928a07fe2d91b46fd0b51f8ffafd97e59f141af64fb7c52ea4ef4a01a7008064f204a7e WHIRLPOOL cc31708e27513dd65163685fc800ef833a9a4d3a194d27b566e22a5c959de534104b5abd30573e8c33bdcc4512db1d4088d0d0ac694766ce93ff1e4c58287125
-MISC ChangeLog 19994 SHA256 465068261fa3ddca047e6ac09a126d88a3f6af01ea2488bd527a4e637cad005a SHA512 7ad77432964173387dc9b37b3ed9303e114860d357b0e4307cd64314a2dc5f68ed1e74b1f545e090d0c2203243f06f647f58239c50fc7bcfa5f48f2b08f2c964 WHIRLPOOL e750c74c0be5d6fbb535517bba6c32fccc154d96b6d97c1baebca3f75674e0bb1fbef39cd6cf7b85a4c10e7ee43631b02c57ca7a8e444d39592ca910a2c9ff4e
+MISC ChangeLog 20175 SHA256 1d2f2869aead48da4c89ef7edfe154b031ffe8c5245f68295d97bb24399c4892 SHA512 b83fbedc9f59c0289118e762d612e01fbbccc1651f533e3081596a8b90fbc270c1e4af9e6acd5529ce706d61f9413bb9f672a40c28ad60c8f4cea3ddc84065d3 WHIRLPOOL fae753135729e2b0c9979deec1c26db825e7fd74c083a84975dd132322144b001c26adddb8ff307519556684010608c3cf597562eb52deb2ef4524f4d7babffa
 MISC metadata.xml 447 SHA256 0c3368f3e86be6edd03475789616c13ed8494d68cccaedcb658a93358df41e47 SHA512 b1f596f76b1a923bf1d52f1f2b5e14b22e0a73412705a9549713e566cb34351bd9845a9d4b1fc35183a4553d9ca0b69092ccd2564c04a99468890b64a0cac6be WHIRLPOOL 3fc1ec31ae1eb2e827e8a7893bf2191d4f9db4e230038204bbecf3af012d82f61e577d8f2788795ebdd23427b00983fdf1e39fbc87fe0d6d007b6dbdf5dda1c5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCAAGBQJR5+z0AAoJEPiazRVxLXTFJVQP/AjyACDQjqb5r+NS3xqPa/lx
+wcnVdUdjKe+1624GA1K/aR6wLG0+QD8eiaTwZIjUsSAQxAJaZsTNsoSfOGBBDQ93
+81qOmGHjsRHuzuEvGLkl2njRwddI0XaUjuqGobz4XMmbMQ0ohRjlN9bNyAK8/+ha
+9+SCrbK3kFwzp2DXUnECktL21h509II9ul2MfkkDNeTtl389v3gZNY7GVXkYka7I
++7DfwK8/dx1vbRQiEhk0RQ+i0dHRUaBHzhRarTdesb7CjRrZh0d0swha0AojFbNx
+mI7/EOPIl4sDtrMC2cccsBeNUCobRdoLo2weKNcaZ7ZEtCJXStafeKETX8OuRVdY
+64dFpD2/jbFhjRI2hiVQu+pZlRhiWPCdSlqJHfYHYWLkImn8omgX+CTzuJ4SYOQN
+zCeByvMCD4qyBR9tVJSmiUi12AXEn4HiIfEO8JgyAxLwHHoypiG8j7FAv1CycWC8
+63BLyNlHTDk26mg7NuG4S5FlbUFgLpkrj4QTHE/Nfl/gu2o/7DtIlIJi1zajcByb
+cBlM8orIz7t4E/52nN6EPr3PS8hDMofmu2EaHexxLu6dmgnEgF+oTRKzCj04tZJJ
+ITD6gJ9AcU6J62OwsWCtmDkFM0x8opP+MKEyYCRSkGJAloYorcSQgn+JqGcylM5z
+HDcH7VdpRp+yYgwh/9mK
+=Gaoc
+-----END PGP SIGNATURE-----
