@@ -5,6 +5,7 @@ DIST parrot-5.1.0.tar.gz 4601825 SHA256 2483963c1bec665be772cb40a71fd3d9d2621fec
 DIST parrot-5.3.0.tar.gz 4597727 SHA256 79d6f1fe20645b0afbc496cd0d7850a78b8940230e7637c5356d780f5aa1750b SHA512 b9fed444af833ac9a66ef2c5af6e6b589b6a64320d7699c29844b72edb885027a78a84cd68934ef416d86090c876b255e8106be7ac0d77969a3e0b0544d0632a WHIRLPOOL a4da457d7844f468baa3ea7c0dfb3b779d8d8a4f0645a7544b5c515f9631ef0bbd05eac240820bd4cc78cdd78e27d284a22548e530ce7595f9a1b0f992f5cbeb
 DIST parrot-5.4.0.tar.gz 4601122 SHA256 4e37686911b446f5e5f2c0aa62138988ba0c411d2c5e2ba231d1a3421a85ad10 SHA512 fecda8746ca561b93ea9c2d3ed18f30a4d86c9be1fd43edecd7adc9a3d2c8eb9290d2d1e3f98d2a54e3acb1141a87aa2433e2c21bc2399ef7cbb3f2c9ee10626 WHIRLPOOL 26de51dddbf147248e5871f6de42c3a4a41ef771404fb412eef632159a098dc5a8fae03e16b049d190b87e21e362a2fddd90176a06db7bda2b900ee45c928015
 DIST parrot-5.5.0.tar.gz 4591639 SHA256 408a45660483499106a35107a836a80da27269a6d54bb114ba6e2249b2b9e9da SHA512 3d431ff035a5c43a511db120d9fb58f44acd62e3560e3f4e9e30ac38b6a7ca7d3c9a34c2ed174c6d494b7940884a8149e82613fbe96d090c86112f9f8fa72741 WHIRLPOOL fff807c3ccd4a8af2465708b6de72f124ebcd6b111f4bdec05366e0e7aeb0cf5c485cf62fe13c5c7fdfc1e0de9432b1f80e7df4adb3e7c5e2ea69db32b4b5f3e
+DIST parrot-5.6.0.tar.gz 4597748 SHA256 8e2d2ddaff36c2c960236c94f868f0eea28740e306345ee42df84bcd9aa146a6 SHA512 27823099bbcd75da56d7485da546f1baa6838322747c20cd79d6dce6bc32e10b0a84b299f7422031653e6a5adc04b4bda4d1f0209d45ab2ec50d55d64f82116b WHIRLPOOL 44f49a8b28451443cda75474ca17cea4075bd3c0d78a8d4caf198e3a79690c3d6271cb5c12db990df190fd5a0e6698c0da6332c55d6160cdf723947e6d2a6839
 EBUILD parrot-4.10.0.ebuild 2507 SHA256 770365c9979ab29a8629a853e4923bd9a510d59e1aefc92a0e045edd5547aef5 SHA512 14f27f521b449ba0da4ab4ab61896febe6f47c28400a635320d1817a2f5d94cef1032208cc8a709b4bcc62836b24cb03a6e44c20a156337cca94bceb0456eec5 WHIRLPOOL 12ec5c9f6736711cedb2da024035c962c55311727448df3975e3ab03d571d8a38dcec51029be7e429744de6542261e25b06ff69058ef7f40340eb6102dfab95e
 EBUILD parrot-4.11.0.ebuild 2507 SHA256 a19def134dd3ed2ad2474a8b1057938080ae050a49ccb09f11495ea5596a117c SHA512 30e38d4718111277432e38fc7916c4d2863be482ccf8281abee255cee1bc7e0c6f67cd2f2a1d14abbd669cd35aea25c63eeef623c210111cb5f9a80a47881227 WHIRLPOOL 0e931042b6627ddab1d90806284286c57c65a822e77571c0f6a5dcc23bcee26a7b54c540ef5efeb738e285ee8d3646686fbe1585ad7d471008d9f5f25cda0fa7
 EBUILD parrot-5.0.0.ebuild 2507 SHA256 c3127338c4f592145bdbc6c9d1cff8fe364a3fd9858a625daa6665d7d462d7cd SHA512 dac389606727ec2e67fa178f98ecabc79c0d63e5c857e91f39864f57efd9a85aa88fdaf550cb74ca5952d04341abdca4ea5bd43021912e43d9e7244ff6063381 WHIRLPOOL c03e7fe89fc31f1c04164a23747d912adccfa811a01c9134dbf6f1f49f01b92f95acd1a356ccc8a64b6a75970002194d1c3e68581699a84001b25c460561c807
@@ -12,5 +13,6 @@ EBUILD parrot-5.1.0.ebuild 2506 SHA256 1de42be6b3ffaa15588210944d7d5adb664549ae1
 EBUILD parrot-5.3.0.ebuild 2506 SHA256 ea259f3a8dd3d599b1091e6f265cd888bcf60cfbe07f780784b6b83da796418c SHA512 a1a5e0eefdbfa868ebb30b06b6612424093bef663dbca858805628f8f69520b152839c88229473207ae83272044ccc9cee2bc066635d1c67831afc1d01d083bb WHIRLPOOL bc132dbf5d5d2f0911b75ac21dcb5404b846e836c098b21f6f44613b418929bc88740b4ab78ea28bc2445b37a4319163261775e8ec1f448a6a86f1c18b216309
 EBUILD parrot-5.4.0.ebuild 2506 SHA256 cb3b4a199f5dd8b74c580a85e406e5b280388b40e365a26770ce779e0fa1e858 SHA512 483824d390b853f942489975e5bfd45e3c1243806fa97ae6b191ed0d715c81be33371afa503539e6b0720ffc7d8e0638f076094f677888508d107a5ad06b0037 WHIRLPOOL 99cbee48d4767b38f857bc37f157b25bc58379faba0139185887c9a998674398b76aaf46383a3f2e63a426a1df8a25cc3904b23f8016df60039119476e6a2937
 EBUILD parrot-5.5.0.ebuild 2506 SHA256 71df40835e6511bc9ae286ba9acce72b0e86263fd49bca24aa09eb5d87a125ce SHA512 845dd5f01147af60df6ad72ed7964876b065a71c43dd039ad2db2e3ddd10afda0161081f7a602bc043befd7cb01063d081a3e3e75bf1f7dd8ab281ca0aadee1c WHIRLPOOL 0dd29e1e6c4ba979c5e673b382ca8c3b36765963e03f0e52bcac5a3b4ef8adc879f9a4adbe13f306b3834e9280b14ff2dc804685a736f639479088aabe5f25e7
-MISC ChangeLog 9551 SHA256 47d4b083628ebb71823e2db19d133d84c422fc9f083dede1bea5b40290f90fd1 SHA512 f95d6f99e3ba7388ced98c62611f7d1657cda2310a243476250b76dd6f922e39539b1b878e200694ef7e58a9361b84428aaaf75ac0d5917089da8d246eaaa52c WHIRLPOOL f65e6851128db0e6b90ad95f8d74c73e2db1ec15e074e440d28089bfeffba8dfcd249f6c1c961e3a8f7abe4f3b87687900df297e66186f17196d2447154c804b
+EBUILD parrot-5.6.0.ebuild 2506 SHA256 b1375c4fc022d7232d3044cf515a0a605148d51ee17fe24b0240338d2bb9922a SHA512 8ae1a9e66fec88711789e3b362f5c9d19b835edf8ba5e8742b5b5d360c38e7fb3dc892077bc55b50462fd543b98c28cc52b10a5f559c9213731ecfe1d60f7fb6 WHIRLPOOL edb0116aa59c6c783415528e727ddae7492e2710745766aa6e12e579c8a2748b04447071105b0a5ef8c4d816e1db0a6fee04cac371d805077150fce6e7617fbe
+MISC ChangeLog 9660 SHA256 527ffbb6ae00afc43b05b3e9f05660c4cbd4bc0d5074504a7a2e764fae21491f SHA512 3a87fc440c93da87a0e58d5b5ca24f73f629f6933e097b19f4030588570fe31c07915411347701ff1258402b20e64ff1c6128709676fe150586721ad3434e08e WHIRLPOOL 4d24f2b906216ded72e901830d56b5dc65e822d27e3c09f2a07183b1ff37c768cde6bc0b5cd9f11b6ccfec1bb312eeab659ce4f1b6ab3ab9b2cbe0850c66133a
 MISC metadata.xml 157 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec SHA512 95158d74d42674de03bc271c8dffa2264759c77681436de71fa9b3ad67f50b09394b0401e6df6dde526bc8dcd6ea666ed6767662bd63c3e92cb33b7b23e4ede8 WHIRLPOOL d3fdf14c384070120719ad4076cd04630790564f5bceda2a273e6481ea27a6fc6291e55d78cbf8bf99b73c7b42e8a1f286927c990702dceee97a63815cb33846
