@@ -6,14 +6,18 @@ AUX 0.45-pthread.patch 476 SHA256 246f067e98debb2bd5568d516099ebac35d353608250f0
 AUX amd64_canonicalize_file_name_definition.patch 396 SHA256 f2208715c4c209bf70041bd6b386c103ac01049857668ef69e04a4511908af32 SHA512 176033162dbc12d0f5e732950ada138b02c9db252cfad9bb456adc92cf5e399c7c1bb46e7e80c1ffda0944966a2ddb256009fbee6cbacd5c3e461440f2f3e3da WHIRLPOOL 4b36276726464d1b4d10c42d21e1f3a572eaf94c0bc8a745d68e6ac92c5f23fdc0ece43ae1d356a5b2611c0ef7019b922267220c26ce808e6765497058d6537c
 DIST Proc-ProcessTable-0.45.tar.gz 69593 SHA256 dbe60687b9946b4135d4adf77f55e865e477d8824815b2e67bc6938aada33df3 SHA512 e667691e4a9bacb030d3bd67dbc70b557a23c590b8026c94b404e7eb4a6d39ff6a760f43bec2bf2bf421bd00bdd85346e2cb7f9d8916932d6b2aeedee886b353 WHIRLPOOL 71f0e9ccd4971909c7761b3d49a7ee0b74ba4cbf80cdcda842309a5638f2095cf99c30e82f4a0a120db4a44f35ef704bc9144df95de80139ca5de01f1adc8e73
 DIST Proc-ProcessTable-0.46.tar.gz 68440 SHA256 59e92eee407da296977c3c0d48da7a22d8feae636e4644e68bed48aad8cc1695 SHA512 d4323d19e2273e7e4f15bed835266bdd522aff3adb4302e0e481295c7052b48141a4dea2348fabd8869f6987c744b6ba1085b8099f0a0a87418a276558d1b5d2 WHIRLPOOL c901dbd890129778bf5e3265a3cc244df1281cb846abf5a583cbf33aa5a95c177b300d309235e88957b9858fb466beeb5cd3766e204e4994ea43dcb3898a1460
+DIST Proc-ProcessTable-0.48.tar.gz 70706 SHA256 4175789ee35abeb99071b41b989ff8c52d119058a12502975d34431c77e8340c SHA512 7ef6cd3936f3480ff3e59ea29b610ba77a078a298730053ff093956a4f3c2a4e0b61937e0aee1280dd439b0e5d41ba703ab81a77690d2f026e22b8df80be6808 WHIRLPOOL 3c8a7ab2d43d981f84a4e545260b5478c636eb033635717da1bee3582a52533ef5eee145323d47c534c7928c36d1a9d8acf288d5c7f5227e372e2c12b1bc3f72
 EBUILD Proc-ProcessTable-0.450.0.ebuild 651 SHA256 681d71c6f14fee17a4c7b8d12f07d2d4a790a21d3506957cf3a4680d2e31089b SHA512 82fd26d9325531168ae39cd4776281154595f8284e90a7748d64c72b1771ecabee06bdc298f13d84a4fcf9a26b30638e858e39ab624b893f8bfa06f12d0ce381 WHIRLPOOL e95d0075fcd348c0f57748af2cf16e3a27236594e9194f68d463517d7a689cc672082948e58b686ace1f4dfd269afae8f91c4bb4efd5ce57ec517ba3b93d53e6
 EBUILD Proc-ProcessTable-0.460.0.ebuild 607 SHA256 798f62cb0a766f7444d3265fe81f10a47f675f889330e86355bf32adaffdc512 SHA512 5416075e6387ec51fcfa45b9a30ba24e9066139c48a386e6a1187a3ebc5ebfaae45317948d38697549b268bf3230c1764834f598c28e7281eabc5f41bf442063 WHIRLPOOL ff1d4096ce5089eb2128783da225b08f2629ae7f8a868aa8377b14b495f0f7ea0e68a07d4249241a52c5e66c89f5e70d6a76206810627c2ced18fff0e37c6917
-MISC ChangeLog 7485 SHA256 651b009d08f0300cf878e9904d2f8eb4dbf741cb7cb86def4a5970ac9e556605 SHA512 d14a4ca2a24c0a65eb366c7a93534113384b04be651c8f3b917c2c97137c79fe7db2d9814a40f7a3eb3fc7bd2a3990b2aee8823c48006444a9148e3e278f57c5 WHIRLPOOL 92b75861268138527ecd62b716cb76cabeed928c351bf7ee7e944fddf73ac61477bac04bff5fbcd55a0f056a4e5907c076148b2e2d38d3481e878b050280a296
+EBUILD Proc-ProcessTable-0.480.0.ebuild 606 SHA256 635841cb1d4876e7fbe65caaaf5e2e58a756dad0851d4430f1bf654c8c82de18 SHA512 72878a424a41569f936fec266924a2ea246818800d3a81f66c27e7eb66147af8955ce0882fea10e7995543a43f21c56b2ba1769592cf17416cfefead4c68f052 WHIRLPOOL f78242e40670df6e5f345cefc43f3ebe1be0972de4a1a66fa122fcb20b7cfd078a35cfd92f5a936b02c6273c337a576cf5c4288ad5f299172abb887837ddad9f
+MISC ChangeLog 7650 SHA256 a5aa062f7866676eec111cbbf9a64d12d6f8b174b98c5cd0f6b6179633d24588 SHA512 42e21bffabda8c6caaa7ec61371019be775c5ecbb3d6c90eb92b9794a85afec254e5dcafcd84775d199457d278c1fc2b74962ca51797e1324d8a3eb8acfc3d73 WHIRLPOOL 282f01aafab7a77b4f8f8ada730a2c959e751792632a39a5ae123e9cddb41f812b4222edfc3e604c40970dba218393248dfa9cc52cc2279b0f184564a41b0173
 MISC metadata.xml 502 SHA256 ea61f47180bb51c0c49e47f43b95ad5481f8cd2d2714f81c95c723b7d5fe6d20 SHA512 b54845c21663df3c561a6a4e6c3ee286a3c726ec102814bd41b3efe9e62b6a2112821dbdd1b77739620815a899c24c40fe5a88ca33b76218ca36891a28734f1c WHIRLPOOL fb259d4454d5614f365b9806efe07066b44b177452091c5bd3e8226d716ade6d898a7f77ee5b337e3ae7a8753c45575dafd02ddd89407f5247f0a2c2f9abb604
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlCWG8EACgkQV3J2n04EauzMXQCeO8s7/rPJMTXfX3W3K6j+BJDm
-TlsAoJOfmLiGsEQO9drK+Qy5bQ3USLqT
-=HQWn
+iJwEAQEIAAYFAlHn99UACgkQG9wOWsQutdZ/oQQAnYNGkOitXm24uTkX5XNZkgvM
+QX42fsjtCJbdQNzro/xPJrAd39VoxRs7/aayFn0JGIDbeMGuEbA1BlkZxYol5Q8F
+Rsngs151QErv0FK9/Co0nE+HElcg04C3FXA+Wt/61O99+xuKAvZBzTLRk71GB1CE
+jD6yzMMnVWVBOy/Vxdw=
+=mxDS
 -----END PGP SIGNATURE-----
