@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.152 2013/04/11 10:57:14 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.153 2013/07/18 13:26:11 polynomial-c Exp $
+
+*apache-tools-2.2.25 (18 Jul 2013)
+
+  18 Jul 2013; Lars Wendler <polynomial-c@gentoo.org>
+  +apache-tools-2.2.25.ebuild:
+  Security bump (permission granted by bonsaikitten).
 
   11 Apr 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Removing ghelm from metadata
